<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <!--Exercise Name-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exercise_name"
        android:layout_alignParentTop="true"
        android:inputType="text"
        android:hint="@string/exercise_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!--Weight Setting-->
    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weight_setting"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/exercise_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--lbs-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbs"
        android:id="@+id/lbs"
        android:layout_alignBottom="@+id/weight_setting"
        android:layout_toRightOf="@+id/weight_setting"
        android:layout_toEndOf="@+id/weight_setting" />


    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/muscle_group"
        android:layout_alignBottom="@+id/lbs"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/muscle_group" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reps"
        android:id="@+id/reps_text"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/reps"
        android:layout_toEndOf="@+id/reps" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reps"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleX=".8"
        android:scaleY=".8"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sets"
        android:id="@+id/sets_text"
        android:layout_alignTop="@+id/reps_text"
        android:layout_toLeftOf="@+id/sets"
        android:layout_toStartOf="@+id/sets" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sets"
        android:layout_alignTop="@+id/reps"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scaleX=".8"
        android:scaleY=".8"/>

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/date"
        android:focusable="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/date"
        android:id="@+id/date_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/sets"
        android:layout_marginTop="80dp"/>

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/time"
        android:focusable="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="80dp"
        android:layout_toLeftOf="@+id/muscle_group"
        android:layout_toStartOf="@+id/muscle_group" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/time"
        android:id="@+id/time_text"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sets"
        android:layout_marginTop="80dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_log"
        android:id="@+id/create_log"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>